--- a/dominion/frontend/public/index.html
+++ b/dominion/frontend/public/index.html
@@ -1,15 +1,57 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
+
     <title>Dominion | Home</title>
+
+    <!-- start single page apps for github pages -->
+    <script type="text/javascript">
+      // single page apps for github pages
+      // https://github.com/rafrex/spa-github-pages
+      // copyright (c) 2016 rafael pedicini, licensed under the mit license
+      // ----------------------------------------------------------------------
+      // this script checks to see if a redirect is present in the query string
+      // and converts it back into the correct url and adds it to the
+      // browser's history using window.history.replacestate(...),
+      // which won't cause the browser to attempt to load the new url.
+      // when the single page app is loaded further down in this file,
+      // the correct url will be waiting in the browser's history for
+      // the single page app to route accordingly.
+      (function(l) {
+        if (l.search) {
+          var q = {};
+          l.search
+            .slice(1)
+            .split('&')
+            .foreach(function(v) {
+              var a = v.split('=');
+              q[a[0]] = a
+                .slice(1)
+                .join('=')
+                .replace(/~and~/g, '&');
+            });
+          if (q.p !== undefined) {
+            window.history.replacestate(
+              null,
+              null,
+              l.pathname.slice(0, -1) +
+                (q.p || '') +
+                (q.q ? '?' + q.q : '') +
+                l.hash
+            );
+          }
+        }
+      })(window.location);
+    </script>
+    <!-- end single page apps for github pages -->
   </head>
+
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
