Use basic link for font include + Fix propTypes

--- a/dominion/frontend/public/index.html
+++ b/dominion/frontend/public/index.html
@@ -10,6 +10,8 @@
 
     <title>Dominion | Home</title>
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+
     <!-- start single page apps for github pages -->
     <script type="text/javascript">
       // single page apps for github pages
