--- a/dominion/frontend/public/404.html
+++ b/dominion/frontend/public/404.html
@@ -10,6 +10,8 @@
 
     <title>sensors.AFRICA | Not Found</title>
 
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
       // https://github.com/rafrex/spa-github-pages
