--- a/dominion/frontend/public/index.html
+++ b/dominion/frontend/public/index.html
@@ -10,7 +10,7 @@
 
     <title>Dominion | Home</title>
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:300,400,500">
 
     <!-- start single page apps for github pages -->
     <script type="text/javascript">
