--- a/dominion/frontend/public/404.html
+++ b/dominion/frontend/public/404.html
@@ -8,9 +8,9 @@
     />
     <meta name="theme-color" content="#000000" />
 
-    <title>Dominion | Not Found</title>
+    <title>sensors.AFRICA | Not Found</title>
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:300,400,500">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
 
     <script type="text/javascript">
       // Single Page Apps for GitHub Pages
