--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -56,7 +56,8 @@
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="dominionShowcase"></div>
+    <div id="dominionFooter"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
