--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -56,6 +56,7 @@
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="dominionData"></div>
     <div id="dominionShowcase"></div>
     <div id="dominionFooter"></div>
     <!--
