--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -11,7 +11,7 @@
     <title>Dominion | Home</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,700|Roboto:300,400,500">
-
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:700" rel="stylesheet">
     <!-- start single page apps for github pages -->
     <script type="text/javascript">
       // single page apps for github pages
@@ -56,6 +56,7 @@
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="dominionHeader"></div>
     <div id="dominionShowcase"></div>
     <div id="dominionFooter"></div>
     <!--
