[dominion] full page header

--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -56,7 +56,7 @@
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="dominionHeader"></div>
+    <div id="dominionHeader" style="position: absolute; height:100%; width: 100%; z-index: 1;"></div>
     <div id="dominionShowcase"></div>
     <div id="dominionFooter"></div>
     <!--
