--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -60,7 +60,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
-    <div id="dominionHeader" style="position: absolute; height:100%; width: 100%; z-index: 1;"></div>
+    <div id="dominionHeader"></div>
     <div id="dominionHomeHero"></div>
     <div id="dominionVideo"></div>
     <div id="dominionShowcase"></div>
