--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -63,6 +63,7 @@
     <div id="dominionHomeHero"></div>
     <div id="dominionVideo"></div>
     <div id="dominionShowcase"></div>
+    <div id="dominionSearch"></div>
     <div id="dominionData"></div>
     <div id="dominionAbout"></div>
     <div id="dominionFooter"></div>
