[dominion] fetch hurumap

--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -55,6 +55,11 @@
       })(window.location);
     </script>
     <!-- end single page apps for github pages -->
+
+    <!-- test purposes -->
+    <script type="text/javascript">
+        var MAPIT = { url: "https://mapit.hurumap.org" };
+    </script>
   </head>
 
   <body>
