initial country hero

--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -62,6 +62,7 @@
 
     <div id="dominionHeader"></div>
     <div id="dominionHomeHero"></div>
+    <div id="dominionCountryHero"></div>
     <div id="dominionVideo"></div>
     <div id="dominionShowcase"></div>
     <div id="dominionData"></div>
