--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -63,6 +63,7 @@
     <div id="dominionHeader"></div>
     <div id="dominionHomeHero"></div>
     <div id="dominionCountryHero"></div>
+    <div id="dominionCountryAbout"></div>
     <div id="dominionVideo"></div>
     <div id="dominionShowcase"></div>
     <div id="dominionData"></div>
