[dominion] fixed portal chooser mobile + search

--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -60,8 +60,11 @@
     <script type="text/javascript">
         var MAPIT = { url: "https://mapit.hurumap.org" };
         var dominion_countries = {
-            'test-country': {
-                name: 'Test Country'
+            'south-africa': {
+                name: 'South Africa'
+            },
+            'kenya': {
+                name: 'Kenya'
             }
         }
     </script>
