--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -70,7 +70,7 @@
     </script>
   </head>
 
-  <body>
+  <body style="background-image: url(/static/img/background.png);">
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <div id="dominionHeader"></div>
