[dominion] refactor header

--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -73,9 +73,8 @@
   <body style="background-image: url(/static/img/background.png);">
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
-    <div id="dominionHeader"></div>
-    <div id="dominionHomeHero"></div>
-    <div id="dominionCountryHero"></div>
+    <div id="dominionHomePageHeader"></div>
+    <div id="dominionCountryPageHeader"></div>
     <div id="dominionVideo"></div>
     <div id="dominionShowcase"></div>
     <div id="dominionData"></div>
