--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -67,6 +67,7 @@
 
     <div id="dominionHeader"></div>
     <div id="dominionHomeHero"></div>
+    <div id="dominionProfileNavigation"></div>
     <div id="dominionVideo"></div>
     <div id="dominionShowcase"></div>
     <div id="dominionData"></div>
