Match design and use single file
 + Center tabs on >= md screens
 + Left align, scrollable tabs on <= sm screens
 + Rename to ProfileTabs

--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -59,6 +59,7 @@
     <!-- test purposes -->
     <script type="text/javascript">
         var MAPIT = { url: "https://mapit.hurumap.org" };
+        var SUPPORTED_COUNTRIES = []
     </script>
   </head>
 
