--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -59,14 +59,22 @@
     <!-- test purposes -->
     <script type="text/javascript">
         var MAPIT = { url: "https://mapit.hurumap.org" };
+        var dominion_countries = {
+            'south-africa': {
+                name: 'South Africa'
+            },
+            'kenya': {
+                name: 'Kenya'
+            }
+        }
     </script>
   </head>
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
-    <div id="dominionHeader"></div>
-    <div id="dominionHomeHero"></div>
+    <div id="dominionHomePageHeader"></div>
+    <div id="dominionCountryPageHeader"></div>
     <div id="dominionVideo"></div>
     <div id="dominionShowcase"></div>
     <div id="dominionData"></div>
