--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -67,6 +67,13 @@
                 name: 'Kenya'
             }
         }
+        var selected_country = {
+            'code': 'ZA',
+            'name': 'South Africa',
+            'centre': [-30.5595, 22.9375],
+            'zoom': 5,
+            'slug': 'south-africa'
+        }
     </script>
   </head>
 
