add code type to index for yarn start

--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -58,7 +58,7 @@
 
     <!-- test purposes -->
     <script type="text/javascript">
-        var MAPIT = { url: "https://mapit.hurumap.org" };
+        var MAPIT = { url: "https://mapit.hurumap.org", code_type: "AFR" };
         var dominion_countries = {
             'south-africa': {
                 name: 'South Africa'
