--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -67,6 +67,13 @@
                 name: 'Kenya'
             }
         }
+        var selected_country = {
+            'code': 'ZA',
+            'name': 'South Africa',
+            'centre': [-30.5595, 22.9375],
+            'zoom': 5,
+            'slug': 'south-africa'
+        }
     </script>
   </head>
 
@@ -75,6 +82,7 @@
 
     <div id="dominionHomePageHeader"></div>
     <div id="dominionCountryPageHeader"></div>
+    <div id="dominionCountryAbout"></div>
     <div id="dominionProfileTabs"></div>
     <div id="dominionVideo"></div>
     <div id="dominionShowcase"></div>
