--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -58,7 +58,7 @@
 
     <!-- test purposes -->
     <script type="text/javascript">
-        var MAPIT = { url: "https://mapit.hurumap.org" };
+      var MAPIT = { url: 'https://mapit.hurumap.org' };
     </script>
   </head>
 
@@ -67,12 +67,14 @@
 
     <div id="dominionHeader"></div>
     <div id="dominionHomeHero"></div>
+    <div id="dominionHowItWorks"></div>
     <div id="dominionVideo"></div>
     <div id="dominionShowcase"></div>
     <div id="dominionData"></div>
     <div id="dominionAbout"></div>
     <div id="dominionPartners"></div>
     <div id="dominionFooter"></div>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
