[dominion] profile page header

--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -82,6 +82,7 @@
 
     <div id="dominionHomePageHeader"></div>
     <div id="dominionCountryPageHeader"></div>
+    <div id="dominionProfilePageHeader"></div>
     <div id="dominionCountryAbout"></div>
     <div id="dominionProfileTabs"></div>
     <div id="dominionVideo"></div>
