Better components + match design especially mobile

--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -89,6 +89,7 @@
     <div id="dominionProfileTabs"></div>
     <div id="dominionVideo"></div>
     <div id="dominionShowcase"></div>
+    <div id="dominionHowItWorks"></div>
     <div id="dominionData"></div>
     <div id="dominionAbout"></div>
     <div id="dominionPartners"></div>
