[dominion] added releases menu

--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -74,6 +74,11 @@
             'zoom': 5,
             'slug': 'south-africa'
         }
+        var dataset_releases = [
+            {
+                title: '2016'
+            }
+        ];
     </script>
   </head>
 
