[dominion] dummy releases data

--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -74,11 +74,7 @@
             'zoom': 5,
             'slug': 'south-africa'
         }
-        var dataset_releases = [
-            {
-                title: '2016'
-            }
-        ];
+        var dataset_releases = [2016];
     </script>
   </head>
 
