[dominion] fix releases and onclick direct to release

--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -74,7 +74,11 @@
             'zoom': 5,
             'slug': 'south-africa'
         }
-        var dataset_releases = [2016];
+        var dataset_releases = [{
+			"citation": "Census, 2016",
+			"name": "Census",
+			"year": "2016"
+		}];
     </script>
   </head>
 
