[dominion] update releases title

--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -79,6 +79,11 @@
 			"name": "Census",
 			"year": "2016"
 		}];
+        var active_dataset = {
+			"citation": "Census, 2016",
+			"name": "Census",
+			"year": "2016"
+		}
     </script>
   </head>
 
