[Dominion] Profile Releases Section (#161)
* [dominion] initial releases section

* [dominion] added releases menu

* [dominion] dummy releases data

* [dominion] link style + fix populate dummy data

* [dominion] fix releases and onclick direct to release

* [dominion] dropdown of releases

* [dominion] update releases title

* take measures to avoid profileData[primary_releases][other] mutation

* use A module

--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -74,6 +74,16 @@
             'zoom': 5,
             'slug': 'south-africa'
         }
+        var dataset_releases = [{
+			"citation": "Census, 2016",
+			"name": "Census",
+			"year": "2016"
+		}];
+        var active_dataset = {
+			"citation": "Census, 2016",
+			"name": "Census",
+			"year": "2016"
+		}
     </script>
   </head>
 
@@ -83,6 +93,7 @@
     <div id="dominionHomePageHeader"></div>
     <div id="dominionCountryPageHeader"></div>
     <div id="dominionCountryAbout"></div>
+    <div id="dominionProfileReleasesSection"></div>
     <div id="dominionProfileTabs"></div>
     <div id="dominionVideo"></div>
     <div id="dominionShowcase"></div>
