Externalize `window.` variables

--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -58,32 +58,32 @@
 
     <!-- test purposes -->
     <script type="text/javascript">
-        var MAPIT = { url: "https://mapit.hurumap.org", code_type: "AFR" };
-        var dominion_countries = {
-            'south-africa': {
-                name: 'South Africa'
-            },
-            'kenya': {
-                name: 'Kenya'
-            }
-        }
-        var selected_country = {
-            'code': 'ZA',
-            'name': 'South Africa',
-            'centre': [-30.5595, 22.9375],
-            'zoom': 5,
-            'slug': 'south-africa'
-        }
-        var dataset_releases = [{
-			"citation": "Census, 2016",
-			"name": "Census",
-			"year": "2016"
-		}];
-        var active_dataset = {
-			"citation": "Census, 2016",
-			"name": "Census",
-			"year": "2016"
-		}
+      var MAPIT = { url: "https://mapit.hurumap.org", code_type: "AFR" };
+      var dominion_countries = {
+          'south-africa': {
+              name: 'South Africa'
+          },
+          'kenya': {
+              name: 'Kenya'
+          }
+      }
+      var selected_country = {
+          'code': 'ZA',
+          'name': 'South Africa',
+          'centre': [-30.5595, 22.9375],
+          'zoom': 5,
+          'slug': 'south-africa'
+      }
+      var dataset_releases = [{
+        "citation": "Census, 2016",
+        "name": "Census",
+        "year": "2016"
+      }];
+      var active_dataset_release = {
+        "citation": "Census, 2016",
+        "name": "Census",
+        "year": "2016"
+      }
     </script>
   </head>
 
