Standard countries variable(s) + logic

--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -59,7 +59,7 @@
     <!-- test purposes -->
     <script type="text/javascript">
       var MAPIT = { url: "https://mapit.hurumap.org", code_type: "AFR" };
-      var dominion_countries = {
+      var countries = {
           'south-africa': {
               name: 'South Africa'
           },
