use common modalso how it works has navigation in modal

--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -87,7 +87,7 @@
             geography: {
                 full_geoid: '',
                 this: {
-                    square_kms: '',
+                    square_kms: 0,
                     short_name: '',
                     parents: []
                 }
