add tabs to index.html for yarn start

--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -103,6 +103,12 @@
           }]
         }
       };
+      profileDataJson.tabs = [
+        {
+          name: 'All',
+          href: ''
+        }
+      ];
     </script>
   </head>
 
