Add missing test tabs data

--- a/dominion/dominion_ui/public/index.html
+++ b/dominion/dominion_ui/public/index.html
@@ -90,6 +90,15 @@
           }
         },
         demographics: {},
+        tabs: [
+          { name: 'Agricultural Land Sales' , href: '#agricultural-land-sales'},
+          { name: 'Land Sales for Transactions of Colour' , href: '#agricultural-land-sales-colour'},
+          { name: 'Farm Land' , href: '#farm-land'},
+          { name: 'Sectional Title Land' , href: '#sectional-title-land'},
+          { name: 'Erven & Urban Land' , href: '#erven-land'},
+          { name: 'Excisions' , href: '#excisions'},
+          { name: 'Afrobarometer' , href: '#afrobarometer'}
+        ],
         primary_releases: {
           active: {
             "citation": "Census, 2016",
